[package]
name = "owl"
version = "0.1.0"
description = "Visualise and edit important integration configurations in AWS"
authors = ["ryanrixxh <ryanmbr@protonmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
aws-config = "1.8.2"
aws-sdk-dynamodb = "1.85.0"
tokio = { version = "1.46.1", features = ["full"] }
aws-sdk-cloudformation = "1.85.0"
open = "5.3.2"
